--- a/divisi/assets/css/style.css
+++ b/divisi/assets/css/style.css
@@ -4543,4 +4543,20 @@ File: Responsive
             transform: translateY(-2000px);
   }
 }
+
+#laksanakan{
+  color: grey;
+}
+
+#abaikan{
+  color: grey;
+}
+
+#laksanakan2{
+  color: grey;
+}
+
+#abaikan2{
+  color: grey;
+}
 /*# sourceMappingURL=style.css.map */
