--- a/pimpinan/assets/css/style.css
+++ b/pimpinan/assets/css/style.css
@@ -4543,4 +4543,20 @@ File: Responsive
             transform: translateY(-2000px);
   }
 }
+
+#icon{
+  color: black;
+}
+
+#abaikan{
+  color: black;
+}
+
+#icon2{
+  color: black;
+}
+
+#abaikan2{
+  color: black;
+}
 /*# sourceMappingURL=style.css.map */
